--- a/my-first-webpage.html
+++ b/my-first-webpage.html
@@ -1,23 +1,24 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>WEBPAGE #1!!!!</title>
+    <title><strong>WEBPAGE</strong> #1!!!!</title>
   </head>
 
   <body>
-    <h1>My first webpage!</h1>
-    <h2>Written with the guidance of Epicodus</h2>
+    <h1>My <em>first</em> webpage!</h1>
+    <h2>Written with the guidance of <em>Epicodus</em></h2>
 
-    <p>This is my first web page!</p>
+    <p>This is my <strong>first web page</stromg>!</p>
     <p>Isn't it nice?</p>
-
-    <p>Here are some things I'm going to learn about coding:</p>
+    <img src="img/kittens.jpg" alt="A photo of a cute kitten.">
+    <p>Here are some <em>things</em> I'm going to learn about coding:</p>
     <ul>
       <li>HTML</li>
       <li>CSS</li>
       <li>JavaScript</li>
       <li>And a lot more</li>
     </ul>
-    
+    <p>Check out <a href="http://www.epicodus.com">Epicodus</a>. It's a great school for learning web programming!</p>
+    <p>Here is a link to my <a href="favorite-things.html">favorite things</a>.</p>
   </body>
 </html>
