--- a/favorite-things.html
+++ b/favorite-things.html
@@ -8,17 +8,42 @@
     <h2>These are a few of my favorite things.</h2>
 
     <h3>People</h3>
-    <p>Here are some of my favorite people!</p>
+    <p>Here are some of my favorite <em>people</em>!</p>
     <ul>
-      <li>My brother Christopher</li>
+      <li>
+        <a href="http://www.example.com/christopher.html">
+          My brother <strong>Christopher</strong>
+          <img src="img/christopher.jpeg" alt="A photo of Christopher.">
+        </a>
+      </li>
       <li>My Mom and Dad:
-        <ul>
-          <li>Steve</li>
-          <li>Carol</li>
+       <ul>
+          <li>
+            <a href="http://www.example.com/steve.html">
+              <strong>Steve</strong>
+              <img src="img/steve.jpeg" alt="A photo of steve">
+            </a>
+          </li>
+          <li>
+            <a href="http://www.example.com/carol.html">
+             <strong>Carol</strong>
+             <img src="img/carol.jpeg" alt="A photo of Carol.">
+            </a>
+          </li>
         </ul>
       </li>
-      <li>My friend Jessica</li>
-      <li>My friend Candy</li>
+      <li>
+        <a href="http://www.example.com/jessica.html">
+         My friend <strong>Jessica</strong>
+              <img src="img/jessica.jpeg" alt="A photo of Jessica.">
+            </a>
+          </li>
+      <li>
+        <a href="http://www.example.com/candy.html">
+            My friend<strong> Candy</strong>
+            <img src="img/candy.jpeg" alt="A photo of Candy.">
+        </a>
+      </li>
     </ul>
 
     <h3>Flavors of ice cream</h3>
@@ -29,5 +54,29 @@
       <li>Black licorice (really!!)</li>
     </ol>
     <p>Thanks for reading about me!</p>
+
+    <h3>Things that are also my favorite things that I like too</h3>
+      <p>Yes I like these:</p>
+      <ul>
+        <li>
+          Potatoes:
+          <img src="img/potatoes.jpeg" alt="a picture of some potatoes.">
+        </li>
+        <li>
+          Fish:
+          <img scr="img/fish.jpg">
+        </li>
+        <li>
+          Doggies:
+          <img src="img/doggie.jpg">
+        </li>
+        <li>
+          Kittens:
+          <img src="img/kittens.jpg">
+        </li>
+      </ul>
+
+
+
   </body>
 </html>
